# GPU-Accelerated-Semantic-Similarity-Search

./: CMakeLists.txt  INSTALL.md  README.md
include/: similarity_search.h
include/cpu/: brute_force.h  brute_force_omp.h  faiss_wrapper.h
include/gpu/: cuda_kernels.h  cuda_search.h  rapids_wrapper.h
include/utils/: benchmark.h  data_loader.h  metrics.h  timer.h  vector_data.h
results/: benchmark_10000000_vectors_128_dim.txt  benchmark_10000000_vectors_256_dim.txt  benchmark_1000000_vectors_1024_dim.txt  benchmark_1000000_vectors_128_dim.txt  benchmark_1000000_vectors_2048_dim.txt  benchmark_1000000_vectors_256_dim.txt  benchmark_1000000_vectors_512_dim.txt  benchmark_100000_vectors_1024_dim.txt  benchmark_100000_vectors_128_dim.txt  benchmark_100000_vectors_2048_dim.txt  benchmark_100000_vectors_256_dim.txt  benchmark_100000_vectors_512_dim.txt  benchmark_10000_vectors_1024_dim.txt  benchmark_10000_vectors_128_dim.txt  benchmark_10000_vectors_2048_dim.txt  benchmark_10000_vectors_256_dim.txt  benchmark_10000_vectors_512_dim.txt  benchmark_1000_vectors_1024_dim.txt  benchmark_1000_vectors_128_dim.txt  benchmark_1000_vectors_2048_dim.txt  benchmark_1000_vectors_256_dim.txt  benchmark_1000_vectors_512_dim.txt
src/: CMakeLists.txt  benchmark_app.cpp  main.cpp
src/cpu/: brute_force.cpp  brute_force_omp.cpp  faiss_wrapper.cpp
src/gpu/: cuda_kernels.cu  cuda_search.cpp  rapids_wrapper.cpp
src/utils/: benchmark.cpp  data_loader.cpp  metrics.cpp  timer.cpp  vector_data.cpp
tests/: CMakeLists.txt  test_brute_force.cpp  test_brute_force_comparison.cpp  test_cuda.cpp  test_faiss.cpp  test_rapids.cpp  test_similarity.cpp  test_vector_data.cpp
